--- a/DOCUMENT/time_signatures.tex
+++ b/DOCUMENT/time_signatures.tex
@@ -2825,3 +2825,166 @@ See \hyperref[sec:compoundfractionalmeter_discussion_two]{\textbf{Discussion}} o
 \vfill \break
 
 %%%%%%%%%%%%%%%%%%%
+
+
+
+
+\section {Time Signature with Decimal Points}
+
+\hfill
+\lilypondfile[staffsize=24,hpadding=4,voffset=4pt]{/decimalPointTimeSignature.ly}
+\hfill
+
+\subsection{Description}
+This is an implementation of a time signature with decimal points. 
+\subsection{Grammar}
+\begin{verbatim}
+\decimalPointTimeSignature
+       #'((NUMERATOR)(DENOMINATOR)) MEASURE_SPAN BEAT_STRUCT
+\end{verbatim}
+\textbf{NB}
+\begin{enumerate}
+\item The first argument takes a list of two lists. For both \verb|NUMERATOR| and \verb|DENOMINATOR|, one or two numbers can be placed:
+\begin{enumerate}
+\item If only one number is placed, it is treated as an integer.
+\item If two numbers are placed, the first number is the integer portion of the number, and the second number is the decimal numerals.
+\item Placing a dot \verb|.| at the end of the second number will print the approximative dots \verb|...| at the end. This is useful for notating irrational numbers. 
+\end{enumerate}
+\item \verb|MEASURE_SPAN| denotes how the measure may be written without the use of "decimal point" time signature. 
+\item \verb |BEAT_STRUCT| indicates beat structure, by which the beaming of the measure abides.
+
+\end{enumerate}
+
+\subsection{Code}
+\begin{Verbatim}[numbers=left,xleftmargin=5mm]
+\version "2.24.4"
+\language "english"
+
+
+decimalPointTimeSignature =
+#(define-music-function
+  (timeSignatureToShow underlyingMeter beatStructure)
+  (list? fraction? number-list?)
+
+  (define (is-float? x)
+    (and (number? x) (inexact? x)))
+
+  #{
+    \time $underlyingMeter
+    \set beatStructure = $beatStructure
+    \override Staff.TimeSignature.stencil =
+    #ly:text-interface::print
+    \override Staff.TimeSignature.text =
+    #(markup
+      (make-override-markup
+       (cons 'baseline-skip 0)
+       (make-center-column-markup
+        (list
+         (if (= (length (car  timeSignatureToShow)) 1)
+             (make-number-markup
+              (number->string
+
+               (car (car timeSignatureToShow))))
+             (make-line-markup
+              (list
+               (make-number-markup
+                (number->string
+                 (car (car timeSignatureToShow))))
+               (make-hspace-markup -0.5)
+               (make-translate-markup
+                '(0 . 0.15)
+                (make-musicglyph-markup "period"))
+               (make-hspace-markup -0.5)
+               (if (not (is-float? (cadr (car timeSignatureToShow))))
+                   (make-number-markup
+                    (number->string
+                     (inexact->exact (cadr (car timeSignatureToShow)))
+                     ))
+                   (make-line-markup
+                    (list (make-number-markup
+                           (number->string
+                            (inexact->exact
+                             (cadr (car timeSignatureToShow)))
+                            ))
+                          (make-hspace-markup -0.5)
+                          (make-translate-markup
+                           '(0 . 0.15)
+                           (make-musicglyph-markup "period"))
+                          (make-hspace-markup -0.5)
+                          (make-translate-markup
+                           '(0 . 0.15)
+                           (make-musicglyph-markup "period"))
+                          (make-hspace-markup -0.5)
+                          (make-translate-markup
+                           '(0 . 0.15)
+                           (make-musicglyph-markup "period"))))
+                   )
+               )
+              )
+             )
+         (if (= (length (cadr  timeSignatureToShow)) 1)
+             (make-number-markup
+              (number->string
+               (car (cadr timeSignatureToShow))))
+             (make-line-markup
+              (list
+               (make-number-markup
+                (number->string
+                 (car (cadr timeSignatureToShow))))
+               (make-hspace-markup -0.5)
+               (make-translate-markup
+                '(0 . 0.15)
+                (make-musicglyph-markup "period"))
+               (make-hspace-markup -0.5)
+               (if (not (is-float? (cadr (cadr timeSignatureToShow))))
+                   (make-number-markup
+                    (number->string
+                     (inexact->exact (cadr (cadr timeSignatureToShow)))
+                     ))
+                   (make-line-markup
+                    (list (make-number-markup
+                           (number->string
+                            (inexact->exact
+                             (cadr (cadr timeSignatureToShow)))
+                            ))
+                          (make-hspace-markup -0.5)
+                          (make-translate-markup
+                           '(0 . 0.15)
+                           (make-musicglyph-markup "period"))
+                          (make-hspace-markup -0.5)
+                          (make-translate-markup
+                           '(0 . 0.15)
+                           (make-musicglyph-markup "period"))
+                          (make-hspace-markup -0.5)
+                          (make-translate-markup
+                           '(0 . 0.15)
+                           (make-musicglyph-markup "period"))))
+                   )
+               )
+              )
+             )
+         )
+        ))
+      (make-hspace-markup -1))
+  #})
+
+
+{
+  \decimalPointTimeSignature #'((2.5)(4)) 5/8 2,3
+  c'8 c' c' c' c'
+}
+
+
+{
+  \decimalPointTimeSignature #'((2 5)(4)) 5/8 2,3
+  c'8 c' c' c' c'
+}
+
+\end{Verbatim}
+
+
+\hyperref[sec:toc]{\textbf{Table of Contents}}
+
+\vfill \break
+
+%%%%%%%%%%%%%%%%%%%
