Reuploaded correct version

--- a/DOCUMENT/time_signatures.tex
+++ b/DOCUMENT/time_signatures.tex
@@ -2970,15 +2970,16 @@ decimalPointTimeSignature =
 
 
 {
-  \decimalPointTimeSignature #'((2.5)(4)) 5/8 2,3
+  \decimalPointTimeSignature #'((2 5)(4)) 5/8 2,3
   c'8 c' c' c' c'
 }
 
 
 {
-  \decimalPointTimeSignature #'((2 5)(4)) 5/8 2,3
-  c'8 c' c' c' c'
+  \decimalPointTimeSignature #'((9)(3 1415.)) 9/4 3,3,3
+  \tuplet 9/9 {c'4 4 4 4 4 4 4 4 4}
 }
+
 
 \end{Verbatim}
 
