--- a/DOCUMENT/YO_snippets_biblio.bib
+++ b/DOCUMENT/YO_snippets_biblio.bib
@@ -182,6 +182,31 @@ address = {Cambridge, MA, USA}
    year = {2012/13}
 }
 
+@book{RN1755,
+   author = {Andre, Mark},
+   title = {Un-fini I : 1995, für eine Harfenistin/einen Harfenisten (Harfe, Tam-tam, grosse Trommel)},
+   publisher = {Carus},
+   address = {Stuttgart},
+   series = {Neue Musik bei Carus},
+   year = {1997}
+}
+
+@book{RN1754,
+   author = {Andre, Mark},
+   title = {Un-fini II : pour clavecin (1996)},
+   publisher = {Editions Durand},
+   address = {Paris},
+   year = {1998}
+}
+
+@book{RN1753,
+   author = {Andre, Mark},
+   title = {Contrapunctus : pour piano},
+   publisher = {Durand},
+   address = {Paris},
+   year = {2006}
+}
+
 
 
 
