--- a/DOCUMENT/noteheads.tex
+++ b/DOCUMENT/noteheads.tex
@@ -66,7 +66,6 @@ jet = #(define-music-function (pitchthing width) (ly:music? number?)
   }
 }
 \end{Verbatim}
-\break
 \hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
@@ -224,10 +223,9 @@ modularLineNotehead =
 \end{Verbatim}
 \subsection{Discussion}
 
-See \hyperref[sec:comb_strings]{Prescriptive Notation for String Instruments} for a possible use of this notehead. \\ 
-\break
+See \hyperref[sec:comb_strings]{Prescriptive Notation for String Instruments} for a possible use of this notehead. 
+\par
 \hyperref[sec:toc]{\textbf{Table of Contents}}
-
 \vfill \break
 
 
@@ -366,8 +364,7 @@ slapB = #(define-music-function (note)   (ly:music?)
 
 \end{Verbatim}
 \subsection{Discussion}
-As the musical example shows, when the Type B Slap Tongue notehead is applied to a quarter note, it could invite confusion in terms of rhythm. As a slap tongue itself is a short sound, I only use the slap tongue noteheads on eighth notes or shorter note durations. \\
-\break
+As the musical example shows, when the Type B Slap Tongue notehead is applied to a quarter note, it could invite confusion in terms of rhythm. As a slap tongue itself is a short sound, I only use the slap tongue noteheads on eighth notes or shorter note durations. \par
 \hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
