--- a/DOCUMENT/foreword.tex
+++ b/DOCUMENT/foreword.tex
@@ -19,7 +19,7 @@ In the interest of making the codes found in this document available to as many 
 
 In creating this document, I make no claim that my notational choices represent an absolute standard that everyone should adhere to. Once the basic principles of notation and typesetting are established (e.g., avoiding collisions, etc.), notation becomes a personal decision for each composer, shaped by careful study of preexisting scores and an evaluation of their musical contexts. 
 
-For example, in his book \textit{The Bass Clarinet – A Personal History}, Harry Sparnaay lists nine variants of noteheads for the slap tongue technique.\autocite[66]{HS2012} In my work, I created two subcategories of the slap tongue technique: one followed by a pitch and another followed by an air sound (which produces the slap tongue effect that sounds "empty"). To distinguish between the two, I decided to use encircled noteheads—both filled and hollow—and attribute them to each subcategory. Again, this is a method that I have found works for my music, but I would be reluctant to suggest that others should follow the same.\footnote{This particular notation becomes quickly problematic in terms of rhythmic notation when a bar is longer than a half note (e.g. 1/2, 2/4, 4/8...) For this reason, I tend to favor time signatures that avoids the use of a half note, such as 3/8 or 5/16.} 
+For example, in his book \textit{The Bass Clarinet – A Personal History}, Harry Sparnaay lists nine variants of noteheads for the slap tongue technique.\autocite[66]{HS2012} In my work, I created two subcategories of the slap tongue technique: one followed by a pitch and another followed by an air sound (which produces the slap tongue effect that sounds \say{empty}). To distinguish between the two, I decided to use encircled noteheads—both filled and hollow—and attribute them to each subcategory. Again, this is a method that I have found works for my music, but I would be reluctant to suggest that others should follow the same.\footnote{This particular notation becomes quickly problematic in terms of rhythmic notation when a bar is longer than a half note (e.g. 1/2, 2/4, 4/8...) For this reason, I tend to favor time signatures that avoids the use of a half note, such as 3/8 or 5/16.} 
 
 Readers are encouraged to modify my codes in order to suit their desired techniques. This document serves as a record of how I arrived at certain notational choices, because learning LilyPond meant that I would also need to become familiar with Scheme, which proved to be somewhat challenging—even though I have used Common Lisp before owing to programming in OpenMusic—because I had to make many guessworks as I navigated various Scheme codes in other snippets available online. I have also gained familiarity in PostScript language as I continued to familiarize myself with LilyPond.\footnote{See Appendix A for some resources I referred to for Scheme- and PostScript-related matters.}
 
@@ -28,17 +28,17 @@ Readers are encouraged to modify my codes in order to suit their desired techniq
 
 After \href{https://www.makemusic.com/}{MakeMusic} announced that they would cease development of the music notation software program \href{https://www.finalemusic.com/}{Finale}, which I had used for the past twenty-four years, I decided to explore a few other music notation programs to determine the best alternative. At the time of writing this document in late November 2024, a little under three months have passed since I started using \href{https://lilypond.org/}{LilyPond} for my daily typesetting needs. I now open LilyPond more often than Finale and am committed to using it for the foreseeable future. LilyPond appears to me as the way forward both as a composer and a musical typesetter, as other proprietary notation programs, such as Dorico (which MakeMusic has claimed to be the leading program in the industry) and Sibelius, fall short of what I wish to accomplish. 
 
-While LilyPond is "just" a music notation software program that I happened to choose, it is, in a way, more than a toolkit for a composer. It appears that way to me, at least, because choosing an open-source platform with strong community support and engagement, rather than a proprietary program where desired functionality is subject to the priorities of a small group of salaried developers, reflects a critique of the capitalist/commercialist mindset that often pervades a composer’s life.
+While LilyPond is \say{just} a music notation software program that I happened to choose, it is, in a way, more than a toolkit for a composer. It appears that way to me, at least, because choosing an open-source platform with strong community support and engagement, rather than a proprietary program where desired functionality is subject to the priorities of a small group of salaried developers, reflects a critique of the capitalist/commercialist mindset that often pervades a composer’s life.
   
-For example, before transitioning to LilyPond, I briefly explored Dorico. However, as of late September 2024, its functionality for displaying straight flags was very limited; the angle of the straight flags provided by the software was too steep. I consulted the online forum and discovered that another user had posted a question similar to mine. The chief developer of Dorico responded to that post, noting that implementing improvements to this feature was possible but "not currently a high priority."\footnote{See: \url{https://forums.steinberg.net/t/straight-flags-angle/766503}.} In this tiered structure typical of capitalism, composers may find themselves with increasingly limited creative "freedom." 
+For example, before transitioning to LilyPond, I briefly explored Dorico. However, as of late September 2024, its functionality for displaying straight flags was very limited; the angle of the straight flags provided by the software was too steep. I consulted the online forum and discovered that another user had posted a question similar to mine. The chief developer of Dorico responded to that post, noting that implementing improvements to this feature was possible but \say{not currently a high priority.}\footnote{See: \url{https://forums.steinberg.net/t/straight-flags-angle/766503}.} In this tiered structure typical of capitalism, composers may find themselves with increasingly limited creative \say{freedom.} 
 
-MakeMusic has heavily advertised on social media platforms that Finale users should migrate to Dorico because it is the "next industry standard." However, this advertising seems to discourage thoughtful consideration of alternatives, leaving little room for reflection or exploration. I became increasingly disillusioned as I witnessed the coercion to invest in a program—however exciting it may appear—with no definite promise of its long-term security and stability.
+MakeMusic has heavily advertised on social media platforms that Finale users should migrate to Dorico because it is the \say{next industry standard.} However, this advertising seems to discourage thoughtful consideration of alternatives, leaving little room for reflection or exploration. I became increasingly disillusioned as I witnessed the coercion to invest in a program—however exciting it may appear—with no definite promise of its long-term security and stability.
 
 Of course, it is not my intent to claim that all composers should abandon their proprietary programs of choice, particularly those they have invested money in and/or have been using for many years. It is, however, important to note that: 
 
 \begin{enumerate}
 
-\item All proprietary programs are at the mercy of the executives who run the companies behind them. "Oh, [insert the name of a proprietary program] is operated by [insert the name of its company], and I just don't see them closing the program down," someone might say. Yet, it happened to Finale. 
+\item All proprietary programs are at the mercy of the executives who run the companies behind them. \say{Oh, [insert the name of a proprietary program] is operated by [insert the name of its company], and I just don't see them closing the program down,} someone might say. Yet, it happened to Finale. 
 
 \item All notation programs, owing to the ways they operate, exert some degree of influence on the way composers compose. As early as the 1980s, Finale's \textit{Mass Mover}, \textit{Note Mover}, and MIDI playback features were already influential in shaping the way composers worked on their music.\footnote{For example, watch from 15:20 of \url{https://youtu.be/T1IRlg87Qks}.} On the one hand, these features may have helped composers save time. On the other hand, their ready availability may have invited overuse. 
 
@@ -51,7 +51,7 @@ These points implicitly highlight the benefits of learning an additional notatio
 \section{How This Document Is Structured}
 Each chapter of this document addresses a specific element of music notation, such as noteheads, stems, beams, and so on. Some chapters, however, cover topics specific to LilyPond coding, such as Markups and Spanners. Snippets that use more than one snippet covered in earlier chapters, thus simulating practical applications of these snippets, are covered in the chapter \textit{Combinations}. Snippets that do not appear to belong to earlier chapters find their home in the chapter \textit{Miscellanies}.
 
-Each snippet entry includes a musical example, a description, the relevant grammar, the code required for the snippet to function, and, whenever necessary, a "Discussion" section.
+Each snippet entry includes a musical example, a description, the relevant grammar, the code required for the snippet to function, and, whenever necessary, a \say{Discussion} section.
 
 \section{LilyPond Version Used}
 The version of LilyPond used to create these snippets is \verb|2.24.4|.
