--- a/DOCUMENT/spanners.tex
+++ b/DOCUMENT/spanners.tex
@@ -4,13 +4,14 @@
 \chapter {Spanners}
 
 This chapter covers snippets that take advantages of spanners (text, line, etc.) in one way or another. Because functions such as \verb|\startTextSpan| and \verb|\stopTextSpan| activate and deactivate these snippets, caution must be paid when using more than one of them at the same time. See \hyperref[sec:comb_spanners]{Example in \textbf{Combinations}} to avoid conflicts between or among the spanner snippets.
-
+\clearpage
 \section {Arrow Lines}
+\label{sec:arrow_lines}
 \lilypondfile[staffsize=20,hpadding=4,voffset=4pt]{/arrow_lines.ly}
 \hfill
 
 \subsection{Description}
-Implementation of arrow lines. It takes advantage of the \verb|\glissando| function. It is possible to have the arrow line span over multiple notes, as \verb|glissando-skip| parameter is set to \verb|##t|. When the arrow line spans over multiple systems, the arrow mark will not appaer at the end of the system. Furthermore, it is possible to use the function on dyads and chords, and depending on the note duration with which the arrow line begins, the placement of the start of the arrow is adjusted accordingly.
+Implementation of arrow lines. It takes advantage of the \verb|\glissando| function. It is possible to have the arrow line span over multiple notes, as \verb|glissando-skip| parameter is set to \verb|##t|. When the arrow line spans over multiple systems, the arrow mark will not appaer at the end of the system.\footnote{See \hyperref[sec:arrow_lines_discussion]{\textbf{Discussion}} for more details.} Furthermore, it is possible to use the function on dyads and chords. The placement of the beginning of the arrow is adjusted according to the different types of notehead. 
 \subsection{Grammar}
 \begin{verbatim}
 \arrowLineOn STARTING_NOTE (NOTES...)
@@ -65,6 +66,9 @@ arrowLineOff =
  \revert Glissando.bound-details.right.padding
  \revert NoteColumn.glissando-skip
 }
+
+
+
 \score {
 
  {
@@ -126,6 +130,12 @@ arrowLineOff =
   \arrowLineOff
   <aes'' c'>1
 
+  <<
+   { \arrowLineOn a''1 \arrowLineOff c'1} \\
+   {\arrowLineOn c'1 \arrowLineOff aes''1}
+  >>
+
+  \break
   \override Voice.Stem.stencil = ##f
   \override Voice.NoteHead.stencil = #ly:text-interface::print
   \override Voice.NoteHead.text =\markup{\musicglyph "noteheads.s1"}
@@ -146,6 +156,176 @@ arrowLineOff =
 
   indent = #0
   line-width = #125
+  ragged-last = ##f
+
+  \context {
+   \Score
+   proportionalNotationDuration = #(ly:make-moment 1/7)
+  }
+ }
+}
+\end{Verbatim}
+\subsection{Discussion}
+\label{sec:arrow_lines_discussion}
+There are a few things to consider when using the arrow lines on dyads and chords:
+\begin{itemize}
+\item By default, all pair of notes will have arrow lines. In order to selectively show the arrow lines, use \verb|\set glissandoMap|. See \href{https://lilypond.org/doc/v2.24/Documentation/notation/expressive-marks-as-lines}{\textbf{1.3.3 Expressive marks as lines}} in LilyPond's \textit{Notation Reference} for details.
+\item  Just as the ordinary \verb|\glissando| function, the X coordinate of the terminating point for \textit{all} of the lines between two dyads/chords is determined by the presence of accidentals in the arrival dyads/chords. Thus, if there is an accidental on one or more of the pitches in the arriving dyad/chord, there may be a space between the tip of arrow and the pitches \textit{without} the accidentals. Should this be avoided, it is best to apply the arrow lines in different layers, so that each of the layers will have a different X-coordinate value of the terminating point of the arrow lines.
+\end {itemize}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
+
+\vfill \break
+
+%%%%%%%%%%%%%%%%%%%
+
+\section {Dashed Arrow Lines}
+\lilypondfile[staffsize=20,hpadding=4,voffset=4pt]{/dashed_arrow_lines.ly}
+\hfill
+
+\subsection{Description}
+Implementation of dashed arrow lines. Its design is nearly identical to that of the \hyperref[sec:arrow_lines]{\textbf{Arrow Lines}}.
+\subsection{Grammar}
+\begin{verbatim}
+\dashedArrowLineOn STARTING_NOTE (NOTES...)
+\dashedArrowLineOff ARRIVAL_NOTE
+\end{verbatim}
+
+\subsection{Code}
+\begin{Verbatim}[numbers=left,xleftmargin=5mm]
+\version "2.24.4"
+
+dashedArrowLineOn =
+#(define-music-function (note)(ly:music?)
+  (define paddingvalue (if (music-is-of-type? note 'event-chord)
+                           (ly:duration-log
+                            (ly:music-property
+                             (first
+                              (ly:music-property note 'elements))
+                             'duration))
+                           (ly:duration-log
+                            (ly:music-property note 'duration))))
+
+  #{
+
+   \override Glissando.breakable = ##t
+   \override Glissando.after-line-breaking = ##t
+   \override Glissando.thickness = #2.35
+   \override Glissando.style = #'dashed-line
+   \override Glissando.bound-details.right.arrow = ##t
+   \override Glissando.bound-details.right-broken.arrow = ##f
+   \override Glissando.bound-details.right-broken.padding = #-1
+   \override Glissando.bound-details.left.padding =
+   #(cond ((= paddingvalue 0) 0.85)
+          ((= paddingvalue 1) 0.65)
+          ((>= paddingvalue 2) 0.65))
+
+   \override Glissando.bound-details.right.padding = #0.25
+   #note
+   \glissando  \override NoteColumn.glissando-skip = ##t
+  #})
+
+
+dashedArrowLineOff =
+{
+ \revert Glissando.breakable
+ \revert Glissando.after-line-breaking
+ \revert Glissando.thickness
+ \revert Glissando.style
+ \revert Glissando.bound-details.right.arrow
+ \revert Glissando.bound-details.right-broken.arrow
+ \revert Glissando.bound-details.right-broken.padding
+ \revert Glissando.bound-details.left.padding
+ \revert Glissando.bound-details.right.padding
+ \revert NoteColumn.glissando-skip
+}
+
+
+
+\score {
+
+ {
+  \override Score.TimeSignature.stencil = ##f
+
+  \dashedArrowLineOn
+  c'1
+  \dashedArrowLineOff
+
+  \dashedArrowLineOn
+  g'2
+  \dashedArrowLineOff
+
+  \dashedArrowLineOn
+  c'4
+  \dashedArrowLineOff
+
+  \dashedArrowLineOn
+  g'8 \noBeam
+  \dashedArrowLineOff
+  \dashedArrowLineOn
+  c'16 s16 |
+
+  \break
+  \dashedArrowLineOff
+  \dashedArrowLineOn
+  c''8
+  \override Voice.NoteHead.transparent = ##t
+  8 8 8 8
+  \revert Voice.NoteHead.transparent
+  \dashedArrowLineOff
+
+  \dashedArrowLineOn
+  8 \harmonic
+  \override Voice.NoteHead.transparent = ##t
+  \once \override Voice.Dots.extra-offset = #'(-1 . -0.75)
+
+  8.
+  \revert Voice.NoteHead.transparent
+  \dashedArrowLineOff
+
+  \dashedArrowLineOn
+  16
+
+  \override Voice.NoteHead.transparent = ##t
+  8 8 8 8
+  \revert Voice.NoteHead.transparent
+  \dashedArrowLineOff
+  \easyHeadsOn
+  \dashedArrowLineOn
+  8
+  \dashedArrowLineOff
+  \easyHeadsOff
+  4.
+  \break
+  \dashedArrowLineOn
+  <c' a''>1
+
+  \dashedArrowLineOff
+  <aes'' c'>1
+
+  <<
+   { \dashedArrowLineOn a''1 \dashedArrowLineOff c'1} \\
+   {\dashedArrowLineOn c'1 \dashedArrowLineOff aes''1}
+  >>
+  \break
+  \override Voice.Stem.stencil = ##f
+  \override Voice.NoteHead.stencil = #ly:text-interface::print
+  \override Voice.NoteHead.text =\markup{\musicglyph "noteheads.s1"}
+  \set glissandoMap = #'((1 . 1) (1 . 1))
+  \dashedArrowLineOn
+  <c' e' g' bes' d'' fis'' a''>2
+  s4
+  \dashedArrowLineOff
+  <c'
+  \single \override NoteHead.text =
+  \markup{\musicglyph "noteheads.s2"}  es'
+  g' bes' d'' fis'' a''>4
+
+ }
+
+ \layout {
+
+  indent = #0
+  line-width = #125
 
   ragged-last = ##f
 
@@ -155,16 +335,14 @@ arrowLineOff =
   }
  }
 }
-
 \end{Verbatim}
-
+\subsection{Discussion}
+See \hyperref[sec:arrow_lines_discussion]{\textbf{Discussion} of the Arrow Lines}.
 \hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
 %%%%%%%%%%%%%%%%%%%
-
-
 
 
 
@@ -406,14 +584,13 @@ The list accepts three integers as parameters, i.e.:
 \subsection{Code}
 \begin{Verbatim}[numbers=left,xleftmargin=5mm]
 \version "2.24.4"
-
 \language "english"
 
 % This code includes snippet for grace note
 % slashes, which has been taken from:
 % https://lsr.di.unimi.it/LSR/Item?id=1048
 
-% Slightly revised, Jan. 19 2025 - YO
+% Slightly revised, Jan. 19/22 2025 - YO
 
 graceNoteBeforeBeatOn =
 #(define-music-function (setting-list starting_note) (list? ly:music? )
@@ -583,12 +760,12 @@ stopAcciaccaturaMusic = {
 {
  \grace {
   \startSlashedGraceMusic
-  \graceNoteBeforeBeatOn #'(4 -2 -1) d'8^\markup{\box A} e f g e' c'
+  \graceNoteBeforeBeatOn #'(1 -2 -1) d'8^\markup{\translate #'(0 . 3) \box A} e f g e' c'
  }
  \graceNoteBeforeBeatOff d''2
  \grace {
   \startSlashedGraceMusic
-  \graceNoteAfterBeatOn #'(6 -1 -2) d''8^\markup{\box B} e' f'' g' e'' c'
+  \graceNoteAfterBeatOn #'(0 -1 -2) d''8^\markup{\box B} e' f'' g' e'' c'
  }
  \graceNoteAfterBeatOff d'2
 }
